src/test/ui/arg-type-mismatch.rs
// error-pattern: mismatched types

fn f(x: isize) { }

fn main() { let i: (); i = f(()); }
